@@ -122,6 +122,8 @@ class UserServiceTest {
     private UserProfileRepository mockUserProfileRepository;
     @Mock
     private RoleChangeNotificationService mockRoleChangeNotificationService;
+    @Mock
+    private FirmService firmService;
 
     @BeforeEach
     void setUp() {
@@ -135,7 +137,8 @@ class UserServiceTest {
                 laaApplicationsList,
                 techServicesClient,
                 mockUserProfileRepository,
-                mockRoleChangeNotificationService);
+                mockRoleChangeNotificationService,
+                firmService);
     }
 
     @Test
@@ -383,7 +386,6 @@ class UserServiceTest {
     @Test
     void createUser() {
         // assign role
-        UUID userId = UUID.randomUUID();
         RegisterUserResponse.CreatedUser createdUser = new RegisterUserResponse.CreatedUser();
         createdUser.setId("id");
         createdUser.setMail("test.user@email.com");
@@ -392,8 +394,6 @@ class UserServiceTest {
         when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
         when(mockEntraUserRepository.saveAndFlush(any(EntraUser.class))).thenAnswer(returnsFirstArg());
 
-        List<String> roles = new ArrayList<>();
-        roles.add(UUID.randomUUID().toString());
         EntraUserDto entraUserDto = new EntraUserDto();
         entraUserDto.setFirstName("Test");
         entraUserDto.setLastName("User");
@@ -422,8 +422,6 @@ class UserServiceTest {
                 .success(RegisterUserResponse.builder().createdUser(createdUser).build());
         when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
 
-        List<String> roles = new ArrayList<>();
-        roles.add(UUID.randomUUID().toString());
         EntraUserDto entraUserDto = new EntraUserDto();
         entraUserDto.setFirstName("Test");
         entraUserDto.setLastName("User");
@@ -992,7 +990,6 @@ class UserServiceTest {
     @Test
     public void testGetUserAppsByUserIdReturnsAppsWhenUserHasAppsAssigned() {
         // Given
-        UUID entraUserId = UUID.randomUUID();
         UUID userProfileId = UUID.randomUUID();
         UUID appId = UUID.randomUUID();
         UUID appRoleId = UUID.randomUUID();
@@ -1010,13 +1007,6 @@ class UserServiceTest {
                 .activeProfile(true)
                 .appRoles(Set.of(appRole))
                 .userProfileStatus(UserProfileStatus.COMPLETE)
-                .build();
-        EntraUser user = EntraUser.builder()
-                .id(entraUserId)
-                .firstName("Test")
-                .lastName("User")
-                .email("test@test.com")
-                .userProfiles(Set.of(userProfile))
                 .build();
         when(mockUserProfileRepository.findById(userProfileId)).thenReturn(Optional.of(userProfile));
         // When
@@ -1649,7 +1639,6 @@ class UserServiceTest {
         @Test
         void getUserOfficesByUserId_returnsOffices_whenUserExists() {
             // Arrange
-            UUID entraUserId = UUID.randomUUID();
             UUID userProfileId = UUID.randomUUID();
             UUID officeId1 = UUID.randomUUID();
             UUID officeId2 = UUID.randomUUID();
@@ -2335,7 +2324,6 @@ class UserServiceTest {
         @Test
         void createUser_withFirm_ForMultiFirmUser_withUserProfile() {
             // assign role
-            UUID userId = UUID.randomUUID();
             RegisterUserResponse.CreatedUser createdUser = new RegisterUserResponse.CreatedUser();
             createdUser.setId("id");
             createdUser.setMail("test.user@email.com");
@@ -2344,8 +2332,6 @@ class UserServiceTest {
             when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
             when(mockEntraUserRepository.saveAndFlush(any(EntraUser.class))).thenAnswer(returnsFirstArg());
 
-            List<String> roles = new ArrayList<>();
-            roles.add(UUID.randomUUID().toString());
             EntraUserDto entraUserDto = new EntraUserDto();
             entraUserDto.setMultiFirmUser(true);
             entraUserDto.setFirstName("Test");
@@ -2370,8 +2356,6 @@ class UserServiceTest {
                     .success(RegisterUserResponse.builder().createdUser(createdUser).build());
             when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
 
-            List<String> roles = new ArrayList<>();
-            roles.add(UUID.randomUUID().toString());
             EntraUserDto entraUserDto = new EntraUserDto();
             entraUserDto.setFirstName("Test");
             entraUserDto.setLastName("User");
@@ -2860,7 +2844,7 @@ class UserServiceTest {
     }
 
     @Test
-    void setDefaultActiveProfile_no_firm() throws IOException {
+    void setDefaultActiveProfile_no_firm() {
         UUID firm1Id = UUID.randomUUID();
         UUID firm2Id = UUID.randomUUID();
         UUID firm3Id = UUID.randomUUID();
@@ -3047,7 +3031,7 @@ class UserServiceTest {
 
         // Then - Should only appear once due to distinct()
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getName()).isEqualTo("Shared App");
+        assertThat(result.getFirst().getName()).isEqualTo("Shared App");
         verify(mockAppRoleRepository).findByUserTypeRestrictionContains(UserType.INTERNAL.name());
     }
 
@@ -3435,8 +3419,8 @@ class UserServiceTest {
         // Then
         assertThat(result.getUsers()).hasSize(1);
         assertThat(result.getTotalUsers()).isEqualTo(1);
-        assertThat(result.getUsers().get(0).getEntraUser().getFirstName()).isEqualTo("Test");
-        assertThat(result.getUsers().get(0).getEntraUser().getLastName()).isEqualTo("Name");
+        assertThat(result.getUsers().getFirst().getEntraUser().getFirstName()).isEqualTo("Test");
+        assertThat(result.getUsers().getFirst().getEntraUser().getLastName()).isEqualTo("Name");
 
         // Verify the repository was called with the search criteria
         verify(mockUserProfileRepository).findBySearchParams(any(UserSearchCriteria.class), any(PageRequest.class));
@@ -3474,7 +3458,7 @@ class UserServiceTest {
                     .build();
 
             final AppRole newRole = AppRole.builder()
-                    .id(UUID.fromString(selectedRoles.get(0)))
+                    .id(UUID.fromString(selectedRoles.getFirst()))
                     .name("NEW_ROLE")
                     .description("New Role Description")
                     .ccmsCode("CCMS_NEW")
@@ -3935,6 +3919,18 @@ class UserServiceTest {
         private EntraUserRepository entraUserRepository;
 
         @Mock
+        private AppRoleRepository appRoleRepository;
+
+        @Mock
+        private TechServicesClient techServicesClient;
+
+        @Mock
+        private FirmService firmService;
+
+        @Mock
+        private OfficeRepository officeRepository;
+
+        @Mock
         private ModelMapper mapper;
 
         @InjectMocks
@@ -3945,9 +3941,12 @@ class UserServiceTest {
             EntraUserDto user = EntraUserDto.builder().build();
 
             RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                    userService.addMultiFirmUserProfile(user, new FirmDto(), "admin"));
+                    userService.addMultiFirmUserProfile(user, new FirmDto(), null, null, "admin"));
 
             assertThat(ex.getMessage()).contains("is not a multi-firm user");
+            verify(userProfileRepository, never()).save(any());
+            verify(entraUserRepository, never()).save(any());
+            verify(techServicesClient, never()).updateRoleAssignment(any(UUID.class));
         }
 
         @Test
@@ -3958,9 +3957,12 @@ class UserServiceTest {
             firmDto.setSkipFirmSelection(false); // invalid
 
             RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                    userService.addMultiFirmUserProfile(user, firmDto, "admin"));
+                    userService.addMultiFirmUserProfile(user, firmDto, null, null, "admin"));
 
             assertThat(ex.getMessage()).contains("Invalid firm details");
+            verify(userProfileRepository, never()).save(any());
+            verify(entraUserRepository, never()).save(any());
+            verify(techServicesClient, never()).updateRoleAssignment(any(UUID.class));
         }
 
         @Test
@@ -3968,9 +3970,12 @@ class UserServiceTest {
             EntraUserDto user = EntraUserDto.builder().multiFirmUser(true).build();
 
             RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                    userService.addMultiFirmUserProfile(user, null, "admin"));
+                    userService.addMultiFirmUserProfile(user, null, null, null, "admin"));
 
             assertThat(ex.getMessage()).contains("Invalid firm details");
+            verify(userProfileRepository, never()).save(any());
+            verify(entraUserRepository, never()).save(any());
+            verify(techServicesClient, never()).updateRoleAssignment(any(UUID.class));
         }
 
         @Test
@@ -3993,9 +3998,12 @@ class UserServiceTest {
             when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
 
             RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                    userService.addMultiFirmUserProfile(user, firmDto, "admin"));
+                    userService.addMultiFirmUserProfile(user, firmDto, null, List.of(), "admin"));
 
             assertThat(ex.getMessage()).contains("User profile already exists");
+            verify(userProfileRepository, never()).save(any());
+            verify(entraUserRepository, never()).save(any());
+            verify(techServicesClient, never()).updateRoleAssignment(any(UUID.class));
         }
 
         @Test
@@ -4010,9 +4018,12 @@ class UserServiceTest {
             when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.empty());
 
             RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                    userService.addMultiFirmUserProfile(user, firmDto, "admin"));
+                    userService.addMultiFirmUserProfile(user, firmDto, null, null, "admin"));
 
             assertThat(ex.getMessage()).contains("User not found for the given user user id");
+            verify(userProfileRepository, never()).save(any());
+            verify(entraUserRepository, never()).save(any());
+            verify(techServicesClient, never()).updateRoleAssignment(any(UUID.class));
         }
 
         @Test
@@ -4029,13 +4040,13 @@ class UserServiceTest {
             EntraUser entraUser = EntraUser.builder().id(entraUserId).multiFirmUser(true).build();
 
             when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
-            when(mapper.map(firmDto, Firm.class)).thenReturn(firm);
 
-            UserProfile result = userService.addMultiFirmUserProfile(userDto, firmDto, "admin");
+            UserProfile result = userService.addMultiFirmUserProfile(userDto, firmDto, null, null, "admin");
 
             assertThat(result.isActiveProfile()).isTrue();
             verify(userProfileRepository).save(result);
             verify(entraUserRepository).save(entraUser);
+            verify(techServicesClient).updateRoleAssignment(any(UUID.class));
         }
 
         @Test
@@ -4044,25 +4055,29 @@ class UserServiceTest {
             Firm existingFirm = Firm.builder().id(firmId).build();
 
             UUID entraUserId = UUID.randomUUID();
-            UUID newFirmId = UUID.randomUUID();
-            Firm newFirm = Firm.builder().id(newFirmId).build();
-            FirmDto newFirmDto = FirmDto.builder().id(newFirmId).build();
             EntraUser entraUser = EntraUser.builder().id(entraUserId).multiFirmUser(true).build();
             UserProfile existingProfile = UserProfile.builder().firm(existingFirm).build();
             entraUser.setUserProfiles(new HashSet<>(Set.of(existingProfile)));
 
-            when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
+            Office office = Office.builder().id(UUID.randomUUID()).build();
+            OfficeDto officeDto = new OfficeDto();
+            AppRole appRole = AppRole.builder().id(UUID.randomUUID()).name("role").build();
+            AppRoleDto appRoleDto = AppRoleDto.builder().id(UUID.randomUUID().toString()).build();
+            FirmDto newFirmDto = FirmDto.builder().id(UUID.randomUUID()).build();
 
-            when(mapper.map(newFirmDto, Firm.class)).thenReturn(newFirm);
+            when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
+            when(officeRepository.findById(any())).thenReturn(Optional.ofNullable(office));
+            when(appRoleRepository.findById(any())).thenReturn(Optional.ofNullable(appRole));
 
             EntraUserDto user = EntraUserDto.builder().id(entraUserId.toString()).multiFirmUser(true).build();
 
-            UserProfile result = userService.addMultiFirmUserProfile(user,
-                    FirmDto.builder().id(newFirmId).build(), "admin");
+            UserProfile result = userService.addMultiFirmUserProfile(user, newFirmDto, List.of(officeDto),
+                    List.of(appRoleDto), "admin");
 
             assertThat(result.isActiveProfile()).isFalse();
             verify(userProfileRepository).save(result);
             verify(entraUserRepository).save(entraUser);
+            verify(techServicesClient).updateRoleAssignment(any(UUID.class));
         }
 
     }
